# kmath

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
include/kmath/: pose2d.h  time.h
src/: pose2d.cpp  time.cpp
test/: pose2d_test.cpp  time_test.cpp
